Implement ListParams for /cities (#374)
Implements the `ListParams` structure to add the ability to add query
parameters to sort the results in various ways.

The request collection was updated with an example.

The bnaclient was regenerated to match the changes.
